--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: "main" # نام شاخه اصلی شما
+    branches: "main"
 
 permissions:
   contents: read
@@ -15,22 +15,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-
       - name: Install and Build
         run: |
           npm install
           npm run build
-
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./dist"
-
       - name: Deploy
         uses: actions/deploy-pages@v4
