--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # حذف تنظیمات کش برای رفع خطای Lock File
 
       - name: Install Dependencies
         run: npm install
@@ -34,5 +34,5 @@ jobs:
         with:
           path: "./dist"
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
